paperless/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webserver
  labels:
    app: webserver
spec:
  selector:
    app: webserver
  ports:
    - name: http
      port: 8000
      targetPort: 8000
  type: ClusterIP
